--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/projects.html
@@ -29,7 +29,7 @@
                         <label class="block text-gray-700 mb-2">Program Coordinator</label>
                         <select id="program-coordinator" name="program_coordinator" class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200" required>
                             <option value="">Select Coordinator</option>
-                            {% for coordinator in coordinators %}
+                            {% for user in user %}
                                 <option value="{{ coordinator.id }}">{{ coordinator.name }}</option>
                             {% endfor %}
                         </select>
