--- a/ciet_pmu/templates/partials/navbar.html
+++ b/ciet_pmu/templates/partials/navbar.html
@@ -13,6 +13,7 @@
       <a href="#" class="text-gray-600 text-lg font-medium hover:text-indigo-600 transition-colors duration-300">FAQs</a>
     </div>
     <div class="space-x-4">
+      UserName:<h1>{{ request.session.username}}</h1>
       <a href="{% url 'login' %}" class="text-white bg-indigo-600 hover:bg-indigo-700 px-6 py-2 rounded-full font-medium transition-all duration-300 transform hover:scale-105">Login</a>
       <a href="{% url 'signup' %}" class="text-indigo-600 border-2 border-indigo-600 hover:bg-indigo-50 px-6 py-2 rounded-full font-medium transition-all duration-300 transform hover:scale-105">Signup</a>
     </div>
